# RNN-approximation-polynomials

./: .gitignore  README.md  environment.yml  pyproject.toml
.binder/: requirements.txt
notebooks/: rnn_polynomial_approximation.ipynb  rnn_polynomial_approximation_support.py
polyrnn_impl/: __init__.py  elman_rnn.py  poly_maps.py  rnn_constructions.py  rnn_transformations.py  spread_input.py
scripts/: bootstrap.sh  bootstrap_venv.sh
tests/: test_elman_rnn.py
